Add redux-saga and first book sagas to fetch books from mock service.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-saga": "^0.10.5"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
