Add wallabyjs test runner.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.9.0",
+    "electron-prebuilt": "^1.2.8",
     "enzyme": "^2.3.0",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
@@ -37,9 +38,10 @@
     "expect": "^1.20.1",
     "express": "^4.13.4",
     "jsdom": "^9.2.0",
+    "json-loader": "^0.5.4",
     "mocha": "^2.5.3",
-    "phantomjs-polyfill": "0.0.2",
     "react-addons-test-utils": "^15.1.0",
+    "wallaby-webpack": "0.0.22",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
