--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-saga": "^0.10.5"
+    "redux-saga": "^0.10.5",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
