--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.9.0",
+    "babel-polyfill": "^6.16.0",
     "classnames": "^2.2.5",
     "immutable": "^3.8.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-saga": "^0.10.5",
-    "whatwg-fetch": "^1.0.0"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.13.0",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-register": "^6.9.0",
-    "electron-prebuilt": "^1.2.8",
-    "enzyme": "^2.3.0",
-    "eslint": "^2.10.2",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.2.2",
-    "eslint-plugin-react": "^5.1.1",
-    "expect": "^1.20.1",
-    "express": "^4.13.4",
-    "jsdom": "^9.2.0",
+    "babel-register": "^6.18.0",
+    "electron-prebuilt": "^1.4.10",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.11.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "^6.7.1",
+    "expect": "^1.20.2",
+    "express": "^4.14.0",
+    "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
-    "mocha": "^2.5.3",
-    "react-addons-test-utils": "^15.1.0",
-    "wallaby-webpack": "0.0.22",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.1",
+    "wallaby-webpack": "0.0.26",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
