--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint ./index.js ./utils/*.js ./app/**/*.js ./app/**/__tests__/*.spec.js",
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "NODE_ENV=test mocha --recursive ./app/**/__tests__/*.spec.js --compilers js:babel-register --require ./utils/spec-setup.js"
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
@@ -24,25 +24,21 @@
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.18.0",
-    "electron-prebuilt": "^1.4.10",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "^6.7.1",
-    "expect": "^1.20.2",
-    "express": "^4.14.0",
-    "jsdom": "^9.8.3",
-    "json-loader": "^0.5.4",
-    "mocha": "^3.2.0",
+    "jest": "^17.0.3",
+    "jest-cli": "^17.0.3",
     "react-addons-test-utils": "^15.4.1",
-    "wallaby-webpack": "0.0.26",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.16.2",
